# OpenGL

./: CMakeCache.txt  CMakeLists.txt  Makefile  OpenGL  OpenGL.cbp  cmake_install.cmake  readme.md
include/: Camera.h  MovingShape.h  Particles.h  Program.h  Shader.h  Shape.h  Vertex.h  VertexColor.h  VertexColorNorm.h  VertexVelocity.h
shaders/: light.vert  lighting.frag  normal_display.geom  normal_gen.geom  particle.frag  particle.geom  particle.vert  shape.frag  shape.vert  shapePhong.frag  shapePhong.vert  standard.frag  standard.vert
src/: Camera.cpp  MovingShape.cpp  Particles.cpp  Program.cpp  Shader.cpp  Shape.cpp  main.cpp
