cmake_minimum_required(VERSION 3.5)
project(OpenGL)
set(OpenGL_GL_PREFERENCE "GLVND")
set(CMAKE_CXX_FLAGS "-std=c++11 ")
find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
find_package(GLEW REQUIRED)
include_directories(${OPENGL_INCLUDE_DIR} .)
add_executable(OpenGL src/main.cpp src/Camera.cpp include/Camera.h src/Shader.cpp include/Shader.h src/Program.cpp include/Program.h src/Shape.cpp include/Shape.h src/MovingShape.cpp include/MovingShape.h include/Vertex.h include/VertexColor.h include/VertexColorNorm.h src/Particles.cpp include/Particles.h)
target_link_libraries(OpenGL GLEW ${OPENGL_opengl_LIBRARY} glfw)